--- a/myapp/public/stylesheets/style.css
+++ b/myapp/public/stylesheets/style.css
@@ -7,11 +7,12 @@ table {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
 }
 thead {
-    background-color: #007BFF;
+    background-color: #b4cfe0;
     color: white; 
 }
 
 thead th {
+    background:#78abcb;
     padding: 12px;
     text-align: left;
     border: 1px solid #ddd; 
@@ -97,7 +98,7 @@ form input, form select, form button {
 }
 
 form button {
-    background-color: #007BFF;
+    background-color: #4d93df;
     color: white;
     border: none;
     cursor: pointer;
@@ -149,7 +150,7 @@ form button:hover {
     padding: 8px 12px;
     margin: 5px 0;
     color: white;
-    background-color: #007BFF; 
+    background-color: #4d93df; 
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s ease;
@@ -158,6 +159,11 @@ form button:hover {
 .booking a:hover {
     background-color: #0056b3; 
 }
+h1{
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+}
+
 @media (max-width: 600px) {
     .box {
         width: 100%;
@@ -166,5 +172,24 @@ form button:hover {
     form {
         flex-direction: column; 
         gap: 10px;
+    }
+}
+
+
+.scrollbar{
+    &::-webkit-scrollbar{
+      height: 1px;
+    }
+    &::-webkit-scrollbar {
+    width: 10px;
+    }
+    &::-webkit-scrollbar-track {
+      background-color: #e5e5e5;
+      border-radius: 10px;
+      margin: 0px 10px;
+    }
+    &::-webkit-scrollbar-thumb{
+      border-radius: 10px;
+      background-color: #616161d4;
     }
 }
