--- a/myapp/public/stylesheets/style.css
+++ b/myapp/public/stylesheets/style.css
@@ -10,21 +10,27 @@ thead {
     background-color: #b4cfe0;
     color: white; 
 }
-
 thead th {
     background:#78abcb;
     padding: 12px;
     text-align: left;
     border: 1px solid #ddd; 
     font-size: 16px;
+    width: 5%;
     
 }
 tbody td {
-    padding: 12px;
+    padding: 5px;
     border: 1px solid #ddd;
     font-size: 14px;
     text-align: left;
-    
+    width: 5%;
+}
+.name{
+    width: 20%;
+}
+.description{
+    width: 70%;
 }
 
 
@@ -209,10 +215,11 @@ h1{
 h2{
     margin-block-start: 0.3em;
     margin-block-end: 0.3em;
+    height: 10%
 }
 .scrollTable{
     border: 2px solid #ddd;
-    height: 80%;
+    height: 85%;
     overflow-y: scroll;
 }
 .scrollBring{
@@ -222,7 +229,17 @@ h2{
 .essentialItems{
     border: 2px solid #ddd;
     height: 80%;
+    margin: 10px 0px;
+    padding: 10px 0px 10px 10px;
 }
 .form{
     height: 10vh;
+}
+td div, td a{
+    display: flex; 
+    justify-content:center;
+}
+td div img, td a img{
+    width:25px;
+    height:25px;
 }
