--- a/myapp/public/stylesheets/style.css
+++ b/myapp/public/stylesheets/style.css
@@ -153,7 +153,8 @@ form button:hover {
     text-align: justify;
     border: 1px outset;
     padding: 0px 10px;
-    background-color: white;
+    background-color: #f9f9f9;
+    border: solid #ccc 2px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     min-height: 50px;
 }
